# kalms-c2p

./: .gitmodules  CMakeLists.txt  Makefile  README.md  amigaos-toolchain.cmake  history.txt  howto.txt  readme.txt  testing.txt
bitmap/: CMakeLists.txt  bitmap.c  bitmap.h  bitmap_test.c  c2p1x1_4_c5_bm.h  c2p1x1_4_c5_bm.s  c2p1x1_4_c5_bm_test.c  c2p1x1_4_c5_bm_word.h  c2p1x1_4_c5_bm_word.s  c2p1x1_4_c5_bm_word_test.c  c2p1x1_6_c5_bm.h  c2p1x1_6_c5_bm.s  c2p1x1_6_c5_bm_040.h  c2p1x1_6_c5_bm_040.s  c2p1x1_6_c5_bm_040_test.c  c2p1x1_6_c5_bm_test.c  c2p1x1_6_c5_bm_word.h  c2p1x1_6_c5_bm_word.s  c2p1x1_6_c5_bm_word_test.c  c2p1x1_8_c5_bm.h  c2p1x1_8_c5_bm.s  c2p1x1_8_c5_bm_040.h  c2p1x1_8_c5_bm_040.s  c2p1x1_8_c5_bm_040_test.c  c2p1x1_8_c5_bm_test.c  c2p2x1_4_c5_bm.h  c2p2x1_4_c5_bm.s  c2p2x1_4_c5_bm_test.c  c2p2x1_8_c5_bm.h  c2p2x1_8_c5_bm.s  c2p2x1_8_c5_bm_test.c  c2p2x2_8_c5_bm.h  c2p2x2_8_c5_bm.s  c2p2x2_8_c5_bm_test.c  readme.txt
ham8/: c2p_2rgb555_3rgb555h8_040.s  c2p_2rgb555_4rgb555h8_040.s  c2p_2rgb565_3rgb555h8_040.s  c2p_2rgb565_4rgb555h8_040.s  c2p_4rgb888_3rgb555h8_040.s  c2p_4rgb888_3rgb666h8_040.s  c2p_4rgb888_4rgb555h8_040.s  c2p_4rgb888_4rgb666h8_040.s  readme.txt
normal/: CMakeLists.txt  c2p1x1_2_c5_gen.h  c2p1x1_2_c5_gen.s  c2p1x1_2_c5_gen_test.c  c2p1x1_4_c5_gen.s  c2p1x1_4_c5_gen_test.c  c2p1x1_5_c3b1_030.h  c2p1x1_5_c3b1_030.s  c2p1x1_5_c3b1_030_test.c  c2p1x1_5_c5_030.h  c2p1x1_5_c5_030.s  c2p1x1_5_c5_030_test.c  c2p1x1_5_c5_060.h  c2p1x1_5_c5_060.s  c2p1x1_5_c5_060_test.c  c2p1x1_6_c3_sc_gen.h  c2p1x1_6_c3_sc_gen.s  c2p1x1_6_c3_sc_gen_test.c  c2p1x1_6_c3b1_030.h  c2p1x1_6_c3b1_030.s  c2p1x1_6_c3b1_030_test.c  c2p1x1_6_c5_030.h  c2p1x1_6_c5_030.s  c2p1x1_6_c5_030_2.h  c2p1x1_6_c5_030_2.s  c2p1x1_6_c5_030_2_test.c  c2p1x1_6_c5_030_test.c  c2p1x1_6_c5_040.h  c2p1x1_6_c5_040.s  c2p1x1_6_c5_040_test.c  c2p1x1_6_c5_gen.h  c2p1x1_6_c5_gen.s  c2p1x1_6_c5_gen_test.c  c2p1x1_8_c3_sc_gen.h  c2p1x1_8_c3_sc_gen.s  c2p1x1_8_c3_sc_gen_test.c  c2p1x1_8_c3b1_030.h  c2p1x1_8_c3b1_030.s  c2p1x1_8_c3b1_030_test.c  c2p1x1_8_c5_030.h  (+30 more)
old/1996_1/: c2p1x1_64_cpu3blit1_pub.s  c2p1x1_64_cpu5.s  c2p1x1_cpu3blit1_pub.s  c2p1x1_cpu5.s  c2p1x1_cpu5_pub.s  c2p2x1_cpu4_bs.s  c2p2x1_cpu4blit1_pub.s  c2p2x1_cpu5_pub.s  readme.txt
old/1996_2/: c2p1x1_8_cpu3blit1_pub.s  c2p1x1_8_cpu5_pub.s  c2p2x1_8_cpu4blit1_pub.s  c2p2x1_8_cpu5_pub.s  readme.txt
old/1997/: c2p1x1_6_c5_040.s  c2p1x1_6_c5_060.s  c2p1x1_8_c5_040.s  c2p1x1_8_c5_060.s  c2p2x1_6_c4b1_030.s  c2p2x1_8_c4b1_030.s  readme.txt
old/1998/: c2p1x1_8_c3b1_gen.s  c2p1x1_8_c5_040.s  readme.txt
old/1999/: c2p1x1_6_c5_040.s
others/: C2P1x1_256.S  c2p8_040_amlaukka.s  c2pak.asm  cpu5azure.asm  cpu5azure2.asm  ppc_c2p1.s  qblit.lha  readme.txt
special/: CMakeLists.txt  c2p1x1_4_c5_gen_spr64.s  c2p1x1_4_c5_word.h  c2p1x1_4_c5_word.s  c2p1x1_4_c5_word_test.c  c2p1x1_6_c0.s  c2p1x1_6_c0_2.s  c2p1x1_8_c0.s  c2p1x1_8_c0_2.s  c2p1x1_8_c0_3.s  c2p1x1_8_c0_4.s  c2p1x1_8_c0_5.s  c2p1x1_8_c0_6.s  c2p1x1_8_c5_gen_mini.s  cc2p.c  readme.txt  special.c  special.h
testhelpers/: CMakeLists.txt  assert_array.h  testdata.h  testdata.s
utest/: utest.h
